--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-#container {
-  text-align: center;
-}
-
 .btn {
   background-color: white;
   color: black;
   border: 1px solid black;
+  width: 150px;
+  height: 50px;
   padding: 10px 40px;
   margin: 50px 0;
   font-weight: 600;
@@ -44,5 +42,58 @@
 .btn.slide-bg:hover span {
   -webkit-transform: none;
           transform: none;
+}
+
+.btn2 {
+  position: relative;
+  display: inline-block;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 300px;
+          perspective: 300px;
+  width: 150px;
+  height: 50px;
+  font-weight: 600;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.btn2.cubic span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  line-height: 48px;
+  text-align: center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transform-origin: center center -25px;
+          transform-origin: center center -25px;
+}
+
+.btn2.cubic .hovering {
+  background-color: black;
+  color: white;
+  -webkit-transform: rotateX(90deg);
+          transform: rotateX(90deg);
+}
+
+.btn2.cubic .default {
+  background-color: white;
+  color: black;
+  -webkit-transform: rotateX(0);
+          transform: rotateX(0);
+}
+
+.btn2.cubic:hover .hovering {
+  -webkit-transform: rotateX(0);
+          transform: rotateX(0);
+}
+
+.btn2.cubic:hover .default {
+  -webkit-transform: rotateX(-90deg);
+          transform: rotateX(-90deg);
 }
 /*# sourceMappingURL=style.css.map */
