--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,14 @@
 $cWhite: white;
 $cBlack: black;
 
-#container {
-  text-align: center;
-}
+
 
 .btn {
   background-color: $cWhite;
   color: $cBlack;
   border: 1px solid $cBlack;
+  width: 150px;
+  height: 50px;
   padding: 10px 40px;
   margin: 50px 0;
   font-weight: 600;
@@ -39,3 +39,55 @@ $cBlack: black;
     }
   }
 }
+
+
+  .btn2 {
+    position: relative;
+    display: inline-block;
+    transform-style: preserve-3d;
+    perspective: 300px;
+    width: 150px;
+    height: 50px;
+    font-weight: 600;
+    margin: 0 auto;
+    cursor: pointer;
+
+    &.cubic {
+      
+      & span{
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 1px solid $cBlack;
+        line-height: 48px;
+        text-align: center;
+        transition: all 0.3s;
+        transform-origin: center center -25px;
+      }
+      & .hovering{
+        background-color: $cBlack;
+        color:$cWhite;
+        transform: rotateX(90deg);
+  
+      }
+      & .default{
+        background-color: $cWhite;
+        color: $cBlack;
+        transform: rotateX(0);
+
+      }
+      &:hover{
+        & .hovering{
+          transform: rotateX(0);
+
+        }
+        & .default{
+          transform: rotateX(-90deg);
+        }
+      }
+    }
+  }
+
+
