--- a/button-style.css
+++ b/button-style.css
@@ -5,7 +5,6 @@
   width: 150px;
   height: 50px;
   padding: 10px 40px;
-  margin: 50px 0;
   font-weight: 600;
   cursor: pointer;
   -webkit-transition: all 0.3s;
@@ -95,5 +94,63 @@
 .btn2.cubic:hover .default {
   -webkit-transform: rotateX(-90deg);
           transform: rotateX(-90deg);
+}
+
+.three-dot-spinner div {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-color: black;
+  border-radius: 50%;
+  -webkit-animation: sk-bouncedelay 1.4s infinite;
+          animation: sk-bouncedelay 1.4s infinite;
+}
+
+.three-dot-spinner div:nth-child(1) {
+  -webkit-animation-delay: -0.32s;
+          animation-delay: -0.32s;
+}
+
+.three-dot-spinner div:nth-child(2) {
+  -webkit-animation-delay: -0.16s;
+          animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  80% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+}
+
+@keyframes sk-bouncedelay {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  80% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
 }
 /*# sourceMappingURL=button-style.css.map */
