--- a/button-style.scss
+++ b/button-style.scss
@@ -9,7 +9,6 @@ $cBlack: black;
   width: 150px;
   height: 50px;
   padding: 10px 40px;
-  margin: 50px 0;
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s;
@@ -89,4 +88,40 @@ $cBlack: black;
     }
   }
 
+  $cBlack: black;
 
+.three-dot-spinner {
+  
+
+  & div {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background-color: $cBlack;
+    border-radius: 50%;
+    animation: sk-bouncedelay 1.4s infinite;
+
+    @for $i from 1 through 2{
+      &:nth-child(#{$i}){
+        animation-delay: -0.32s /$i;
+      }
+    }
+
+    
+  }
+  }
+
+  @keyframes sk-bouncedelay {
+    0% {
+      transform: scale(0);
+    }
+    40% {
+      transform: scale(1);
+    }
+    80% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
